src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CS_Issue__c</fullName>
        <label>CS Issue</label>
        <picklist>
            <picklistValues>
                <fullName>Pay Off Check Fed Ex Label Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockbox Detail Explanation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Information Updated or Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change CC Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update On File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquired on Refund Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Login Information for RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Login Information for Lockbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Split Increase/Decrease for RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Increase/Decrease for RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated Contact Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems with RapidAdvance Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Caller Same Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Call Back from AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Off Account GCS Account Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LL Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Call with Merchant and CC Processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH problem/question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank information change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change credit card Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double dipping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9_Call_Recording__c</fullName>
        <formula>IF(NOT(ISBLANK(Five9__Five9SessionId__c ) ), &quot;http://callrecord/&quot; &amp; 
TEXT(YEAR( DATEVALUE( CreatedDate ) )) &amp; 
&quot;_&quot; &amp; 
LPAD(TEXT(MONTH(DATEVALUE( CreatedDate ) )), 2 , &quot;0&quot;) &amp; 
&quot;_&quot; &amp; 
LPAD(TEXT ( DAY(DATEVALUE( CreatedDate ) )), 2 , &quot;0&quot;) &amp; 
&quot;/&quot; &amp; Five9__Five9SessionId__c &amp; &quot;.wav&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Five9 Call Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9_Start_Time__c</fullName>
        <description>Time Five9 call started</description>
        <formula>CreatedDate-
(((VALUE(LEFT(Five9__Five9HandleTime__c, 2)) * 3600)
+ (VALUE(MID(Five9__Five9HandleTime__c, 4, 2)) * 60)
+ (VALUE(RIGHT(Five9__Five9HandleTime__c, 2)))) / 86400)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Five9 Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ANI__c</fullName>
        <label>Five9 ANI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentExtension__c</fullName>
        <label>Five9 Agent Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentName__c</fullName>
        <label>Five9 Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent__c</fullName>
        <label>Five9 Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallType__c</fullName>
        <label>Five9 Call Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignId__c</fullName>
        <label>Five9CallbackCampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignName__c</fullName>
        <label>Five9CallbackCampaignName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackId__c</fullName>
        <label>Five9CallbackId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackNumber__c</fullName>
        <label>Five9CallbackNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Campaign__c</fullName>
        <label>Five9 Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Cost__c</fullName>
        <label>Five9 Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five9__Five9DNIS__c</fullName>
        <label>Five9 DNIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9HandleTime__c</fullName>
        <label>Five9 Handle Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9SessionId__c</fullName>
        <label>Five9 Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9WrapTime__c</fullName>
        <label>Five9 After Call Work Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Company_Name__c</fullName>
        <description>Merchant company name typed into the webform for ET</description>
        <label>Merchant Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Email_Address__c</fullName>
        <description>email address entered into the webform for ET</description>
        <label>Merchant Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Merchant_Name__c</fullName>
        <description>merchants name entered into a web form for ET</description>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Phone_Number__c</fullName>
        <description>phone number of merchant entered into the webform for ET</description>
        <label>Merchant Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QC_Person__c</fullName>
        <label>QC Person</label>
        <picklist>
            <picklistValues>
                <fullName>Cathrine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yolanda</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_Last_7_Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Geopointe Activities (Last 7 Days)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_all</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <label>Geopointe Activities (all)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_today</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Geopointe Activities (today)</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>